# AguaMind-OS

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
apps/api-go/: Dockerfile  go.mod  koyeb.yaml
apps/pocketbase/: Dockerfile  README.md
apps/telegram/: Dockerfile  agent_notifier.py  bot.py  get_chat_id.py  koyeb.yaml  pyproject.toml  setup_bot.md
apps/web-next/: package.json  vercel.json
apps/web-svelte/: package.json  svelte.config.js  vercel.json  vite.config.ts
apps/web-vue/: app.vue  netlify.toml  nuxt.config.ts  package.json  (+1 more)
docs/: ARCHITECTURE.md  DEPLOY.md  HACKATHON.md  SYSTEM_PROMPT.md  USAGE.md
firmware/: config.py  display.py  main.py  mqtt_client.py  sensors.py  simulator_pc.py
scripts/: e2e_smoke.py  generate_datasheet.py  launch.mjs  preview.html  serve-preview.mjs  test_upload_flow.py  verify_telegram.py
services/api/: Dockerfile  demo_server.py  koyeb.yaml  pyproject.toml
services/api/app/: config.py  main.py
services/api/app/middleware/: __init__.py  auth.py  rate_limit.py
services/api/app/routers/: agent_water.py  agents.py  chat.py  data.py  database.py  geo.py  health.py  mitigation.py  ml.py  notify.py  profiles.py  rag.py  reports.py  telegram_notify.py  water.py
services/api/app/sensors/: adapters.py  normalizer.py  registry.py  schemas.py
services/api/app/services/: __init__.py  supabase_client.py
tesis-uniajc/: CARACTERIZACION-PTAP.xlsx  Presentacion-tesis.pptx
(+163 files in other folders)
